NO-SQL/terminal.txt
kigarama> db.students.find()
[
  {
    _id: ObjectId('672601c8ed94dc2107c73bfa'),
    name: 'ishimwe',
    email: 'ishimwe@gmail.com',
    age: 10
  },
  {
    _id: ObjectId('672601c8ed94dc2107c73bfc'),
    email: 'me@gmail.com',
    name: 'my name',
    age: 10
  },
  {
    _id: ObjectId('67260a60ed94dc2107c73c00'),
    name: 'fake1',
    age: 30,
    city: 'gisenyi'
  },
  {
    _id: ObjectId('67260a60ed94dc2107c73c01'),
    name: 'mwizerwa',
    age: 30,
    city: 'gisenyi'
  },
  {
    _id: ObjectId('67260a60ed94dc2107c73c02'),
    name: 'fake3',
    age: 30,
    city: 'gisenyi'
  },
  {
    _id: ObjectId('67260c431e34aa0e607bfa47'),
    age: 21,
    email: 'yougman@gmail.com',
    name: 'young man'
  },
  {
    _id: ObjectId('67263d3a883261fcdec73bf8'),
    name: 'John Doe',
    age: 21
  }
]
kigarama> db.students.bulkWrite([
{ 
...     {
...         insertOne:             document: {
       }
Uncaught:
SyntaxError: Unexpected token, expected "," (3:39)

  1 | db.students.bulkWrite([
  2 |     {
> 3 |         insertOne:             document: {
    |                                        ^
  4 |

kigarama>                 name: "John Doe",
...                 age: 21
Uncaught:
SyntaxError: Missing semicolon. (2:19)

  1 |                 name: "John Doe",
> 2 |                 age: 21
    |                    ^
  3 |

kigarama>             }
Uncaught:
SyntaxError: Unexpected token (1:12)

> 1 |             }
    |             ^
  2 |

kigarama>      },
Uncaught:
SyntaxError: Unexpected token (1:5)

> 1 |      },
    |      ^
  2 |

kigarama>     {
...         updateOne: {
...             filter: { name: "John Doe" },
...         }
...         }
...     },
...         }
...     },
...         }
...         }
...     },
...     {
...         deleteOne: {
...             filter: { age: 16 }
...         }
...     }
... ])
 *  History restored 


edsnk@codeWithEdison MINGW64 /d/TRAININGS/KIGARAMA TSS
$